--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>G Harmonics Consulting - Boomi Integration</title>
-  <meta content="" name="G Harmonics Consulting - Boomi Integration Services">
+  <title>G Harmonics Consulting</title>
+  <meta content="" name="G Harmonics Consulting">
   <meta content="" name="GHARMONICS">
 
   <!-- Favicons -->
@@ -72,36 +72,35 @@
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-12  order-lg-1 d-flex flex-column justify-content-center text-center caption">
-          <p>G<span class="circle"><sub>♫</sub></span> CONSULTING</p>
-          <h2>Boomi Integration Services</h2>
+          <div class="section-header"><h2><br/><br/><br/>G<span class="circle"><sub>♫</sub></span> CONSULTING</h2></div>
         </div>
       </div>
     </div>
-
+    <br/><br/><br/><br/><br/><br/><br/><br/>
     <div class="icon-boxes position-relative">
       <div class="container position-relative">
         <div class="row gy-4 mt-5">
 
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-fullscreen"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Personal attention</a></h4>
+              <div class="icon"><i class="bi bi-person-check"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">Personal Service</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
 
           <div class="col-xl-4 col-md-4 card-two" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-headset"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">4x Boomi Certified</a>In progress</h4>
+              <div class="icon"><i class="bi bi-fullscreen"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">Customized, High-Quality<br/>Solutions</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
 
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-person-check"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Quality service</a></h4>
+              <div class="icon"><i class="bi bi-headset"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">1-on-1 Support</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
@@ -118,7 +117,6 @@
     <!-- - - - - - - - -  About Us Section - - - - - - - -  -->
     <section id="about" class="about">
       <div class="container" data-aos="fade-up">
-
         <div class="section-header">
           <h2>Bring your data into harmony!</h2>
           <p>G Harmonics consulting provides integration solutions for all your needs,<br/>so that your business runs smoother, faster, and more intelligently.</p>
@@ -126,7 +124,7 @@
 
         <div class="row gy-4">
           <div class="col-lg-4">
-            <img src="assets/images/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
+            <img src="assets/images/about.png" class="img-fluid rounded-4 mb-4" alt="">
           </div>
           <div class="col-lg-8">
             <div class="content ps-0 ps-lg-5">
