--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>G Harmonics Consulting</title>
-  <meta content="" name="G Harmonics Consulting">
+  <title>GHARMONICS - Boomi, Netsuite, Salesforce Integrations Consulting</title>
+  <meta content="" name="GHARMONICS">
   <meta content="" name="GHARMONICS">
 
   <!-- Favicons -->
@@ -72,10 +72,11 @@
     <div class="container position-relative">
       <div class="row gy-5" data-aos="fade-in">
         <div class="col-lg-12  order-lg-1 d-flex flex-column justify-content-center text-center caption">
-          <div class="section-header"><h2><br/><br/><br/>G<span class="circle"><sub>♫</sub></span> CONSULTING</h2></div>
+          <div class="section-header"><h2><br/><br/><br/>G<span class="circle">HARMONICS</span> CONSULTING</h2></div>
         </div>
       </div>
     </div>
+    
     <br/><br/><br/><br/><br/><br/><br/><br/>
     <div class="icon-boxes position-relative">
       <div class="container position-relative">
@@ -83,24 +84,24 @@
 
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-person-check"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Personal Service</a></h4>
+              <div class="icon"><i class="bi bi-building"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">Professional Services</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
 
-          <div class="col-xl-4 col-md-4 card-two" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-fullscreen"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Customized, High-Quality<br/>Solutions</a></h4>
+              <div class="icon"><i class="bi bi-award"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">Quality Solutions</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
 
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
-              <div class="icon"><i class="bi bi-headset"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">1-on-1 Support</a></h4>
+              <div class="icon"><i class="bi bi-magic"></i></div>
+              <h4 class="title"><a href="" class="stretched-link">Amazing Results</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
