--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
   <!-- Main CSS File -->
   <link href="assets/stylesheets/styles.css" rel="stylesheet">
 
-
 </head>
 
 <body>
@@ -38,31 +37,6 @@
       <a href="index.html" class="logo d-flex align-items-center">
         <h1>G<span><sub>♫</sub></span></h1>
       </a>
-     <!--
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a href="#hero">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#testimonials">Testimonials</a></li>
-          <li><a href="#team">Team</a></li>
-          <li><a href="#faq">FAQs</a></li>
-          <li class="dropdown"><a href="#"><span>Menu</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="#">Pricing</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
-              <li><a href="#">Privacy Policy</a></li>
-            </ul>
-          </li>
-          <li><a href="#recent-posts">News</a></li>
-        </ul>
-      </nav>--><!-- .navbar -->
-
-      <!--
-      <i class="mobile-nav-toggle mobile-nav-show bi bi-list"></i>
-      <i class="mobile-nav-toggle mobile-nav-hide d-none bi bi-x"></i>
-      -->
-
     </div>
   </header><!-- End Header -->
   <!-- End Header -->
@@ -76,7 +50,7 @@
         </div>
       </div>
     </div>
-    
+
     <br/><br/><br/><br/><br/><br/><br/><br/>
     <div class="icon-boxes position-relative">
       <div class="container position-relative">
@@ -85,7 +59,7 @@
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="100">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-building"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Professional Services</a></h4>
+              <h4 class="title"><a href="#columns" class="stretched-link">Professional Services</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
@@ -93,7 +67,7 @@
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="200">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-award"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Quality Solutions</a></h4>
+              <h4 class="title"><a href="#columns" class="stretched-link">Quality Solutions</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
@@ -101,7 +75,7 @@
           <div class="col-xl-4 col-md-4" data-aos="fade-up" data-aos-delay="500">
             <div class="icon-box">
               <div class="icon"><i class="bi bi-magic"></i></div>
-              <h4 class="title"><a href="" class="stretched-link">Amazing Results</a></h4>
+              <h4 class="title"><a href="#columns" class="stretched-link">Amazing Results</a></h4>
             </div>
           </div>
           <!--End Icon Box -->
@@ -133,13 +107,13 @@
                  <b>We deliver:</b>
               </p>
               <ul>
-                <li><i class="bi bi-1-square"></i> Integration and unification for EDI, ETL, MDM, B2B, APIs, and more. </li>
-                <li><i class="bi bi-2-square"></i> Customized Architecture, Design, & Development.</li>
-                <li><i class="bi bi-3-square"></i> Easy-to-use and support Boomi iPaaS solutions.</li>
-                <li><i class="bi bi-4-square"></i> Support for Salesforce, SAP, Netsuite, Workday, Data warehouses, and more.</li>
-                <li><i class="bi bi-5-square"></i> Local, hybrid, and cloud integrations.</li>
-                <li><i class="bi bi-6-square"></i> Personalized service. </li>
-                <li><i class="bi bi-7-square"></i> Enterprise-grade solutions.</li>
+                <li><i class="bi bi-circle"></i> Integration and unification for EDI, ETL, MDM, B2B, APIs, and more. </li>
+                <li><i class="bi bi-circle"></i> Customized Architecture, Design, & Development.</li>
+                <li><i class="bi bi-circle"></i> Easy-to-use and support Boomi iPaaS solutions.</li>
+                <li><i class="bi bi-circle"></i> Support for Salesforce, SAP, Netsuite, Workday, Data warehouses, and more.</li>
+                <li><i class="bi bi-circle"></i> Local, hybrid, and cloud integrations.</li>
+                <li><i class="bi bi-circle"></i> Personalized service. </li>
+                <li><i class="bi bi-circle"></i> Enterprise-grade solutions.</li>
               </ul>
             </div>
           </div>
@@ -148,10 +122,41 @@
       </div>
     </section><!-- End About Us Section -->
 
+    <!-- - - - - - - - -  3 Columns Section - - - - - - - -  -->
+    <section id="columns" class="about">
+      <div class="container">
+
+        <div class="row gy-4">
+          <div class="col-lg-4">
+            <div class="section-header">
+              <h2>Professional Services...</h2>
+              <p>10+ years of experience in the CS field, including countless programming languages and platforms.</p>
+            </div>
+
+          </div>
+          <div class="col-lg-4">
+            <div class="section-header">
+              <h2>Quality Solutions...</h2>
+              <p>Top-notch integrations built with best-standards and in readable, extensible, and clean formats.</p>
+            </div>
+
+          </div>
+          <div class="col-lg-4">
+            <div class="section-header">
+              <h2>And Amazing Results!</h2>
+              <p>Flexible, powerful, and efficient iPaaS integrations among Boomi, Salesforce, Netsuite, and more.</p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End 3 Columns Section -->
+
     <!-- - - - - - - - -  Call To Action Section - - - - - - - -  -->
     <section id="call-to-action" class="call-to-action">
       <div class="container text-center" data-aos="zoom-out">
-        <h3>SCHEDULE A <b>FREE</b> CONSULTATION TODAY!</h3>
+        <h3>Schedule a <b>free</b> consultation today!</h3>
         <a class="cta-btn" href="mailto:andyk@gharmonics.com">Email</a>
       </div>
     </section><!-- End Call To Action Section -->
